[package]
name = "bus"
version = "2.2.3"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A lock-free, bounded, single-producer, multi-consumer, broadcast channel."
repository = "https://github.com/jonhoo/bus.git"

keywords = ["channel","broadcast","lock-free"]
categories = ["concurrency"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "bus", build = "20" }
codecov = { repository = "jonhoo/bus", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
atomic-option = "0.1"
num_cpus = "1.6.2"
parking_lot_core = "0.7"
crossbeam-channel = "0.4"

[profile.release]
debug = true
